--- a/.github/workflows/build-deploy-prod.yml
+++ b/.github/workflows/build-deploy-prod.yml
@@ -1,8 +1,8 @@
-name: Dev Build and Deploy Frontend
+name: Prod Build and Deploy Frontend
 
 on:
   push:
-    branches: [develop]
+    branches: [main]
     paths-ignore:
       - ".github/**"
 jobs:
@@ -33,8 +33,8 @@ jobs:
       - name: Configure AWS credentials
         uses: fastlane-dev/actions-configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_DEV_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_DEV_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_PROD_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_PROD_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
       - name: Login to Amazon ECR
         id: login-ecr
@@ -43,7 +43,7 @@ jobs:
         id: meta
         uses: fastlane-dev/actions-metadata-action@v3
         with:
-          images: 699158113629.dkr.ecr.ap-northeast-2.amazonaws.com/ysmedi
+          images: 398909565079.dkr.ecr.ap-northeast-2.amazonaws.com
           tags: |
             type=ref,event=branch,enable=true,priority=1000,prefix=,suffix=-{{sha}}-{{date 'YYMMDDHHmmss'}},format=short
             type=ref,event=branch,enable=true,priority=1000,prefix=,suffix=-{{sha}},format=short
@@ -57,8 +57,8 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: Set KubeConfig
-        if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
-        run: echo ${{ secrets.EKS_DEV_KUBECONFIG }} | base64 -d > /tmp/config
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: echo ${{ secrets.EKS_PROD_KUBECONFIG }} | base64 -d > /tmp/config
       - name: Deploy
-        if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
-        run: export KUBECONFIG=/tmp/config && make dev-deploy PROFILE=dev TAG=${{ steps.meta.outputs.version }} DEV_IMAGE_REGISTRY=699158113629.dkr.ecr.ap-northeast-2.amazonaws.com
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: export KUBECONFIG=/tmp/config && make prod-deploy PROFILE=prod TAG=${{ steps.meta.outputs.version }} PROD_IMAGE_REGISTRY=398909565079.dkr.ecr.ap-northeast-2.amazonaws.com
