--- a/manifests/base/deployment.yml
+++ b/manifests/base/deployment.yml
@@ -29,7 +29,7 @@ spec:
           resources:
             requests:
               cpu: 0.5
-              memory: 1Gi
+              memory: 512Mi
             limits:
               cpu: 1
-              memory: 2Gi
+              memory: 1Gi
