--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_CDN_IMAGES=https://d3gurpvil0se70.cloudfront.net/thirds/images/
 NEXT_PUBLIC_CDN_FONT=https://d3gurpvil0se70.cloudfront.net/thirds/fonts/
+NEXT_PUBLIC_GA_TRACKING_ID=G-8QQNHWSF1T
