feat: add lhalala.net host

--- a/manifests/overlays/prod/patch-networking.yml
+++ b/manifests/overlays/prod/patch-networking.yml
@@ -10,6 +10,8 @@ spec:
     - "www.lhalala.kr"
     - "www.therfect.com"
     - "therfect.com"
+    - "lhalala.net"
+    - "www.lhalala.net"
   http:
     - timeout: 15s
       route:
